--- a/mkdocs_autodoc/themes/bootstrap/_details.html
+++ b/mkdocs_autodoc/themes/bootstrap/_details.html
@@ -1,24 +1,27 @@
-<ul class="member-documentation">
-    {% for member in members %}
-    {% if member.kind not in ('Module', 'Class', 'Member', 'Variable') %}
-    <li>
-        <div class="member-detail">
-            <a name="{{ member.name }}"></a>
-            {% if 'Function' in member.kind or 'Method' in member.kind or 'Builtin' in member.kind %}
-            {% if 'Static' in member.kind or 'Class' in member.kind %}
-            <p class="header">def <a name="{{ member.name }}">{{ member.name }}</a>{{ member.args }} <strong>[{{ member.kind.lower() }}]</strong></p>
-            {% else %}
-            <p class="header">def <a name="{{ member.name }}">{{ member.name }}</a>{{ member.args }}</p>
-            {% endif %}
-            <p class="reimpliments">{{ member.reimpliments }}</p>
-            <p class="reimplimented">{{ member.reimplimented }}</p>
-            <p class="docs">{{ member.html_docs }}</p>
-            {% else %}
-            <p class="header">{{ member.name }}</p>
-            <p class="docs">{{ member.html_docs }}</p>
-            {% endif %}
-        </div>
-    </li>
-    {% endif %}
-    {% endfor %}
-</ul>
+{% for member in members -%}
+    {% if member.kind not in ('Module', 'Class', 'Member', 'Variable', 'Signal', 'Slot', 'Property') -%}
+        {% if 'Static' in member.kind or 'Class' in member.kind or 'Protected' in member.privacy or 'Private' in member.privacy -%}
+            <div class="page-header">
+                <h3>
+                    def <a name="def-{{ member.name.lower() }}" class="text-success">{{ member.name }}{{ member.args }}</a>
+                    <span class="pull-right"><small><strong>[{{ member.privacy.lower() }} {{ member.kind.lower() }}]</strong></small></span>
+                </h3>
+            </div>
+        {% else -%}
+            <div class="page-header">
+                <h3>
+                    def <a name="def-{{ member.name.lower() }}" class="text-success">{{ member.name }}{{ member.args }}</a>
+                </h3>
+            </div>
+        {%- endif %}
+        {% if member.reimpliments -%}
+            <em>Reimpliments: {{ member.reimpliments }}</em>
+        {%- endif %}
+        {% if member.reimplimented -%}
+            <em>Reimplimented: {{ member.reimplimented }}</em>
+        {%- endif %}
+        {% if member.raw_docs -%}
+            {{ member.wikitext_docs }}
+        {%- endif %}
+    {%- endif %}
+{%- endfor %}
