--- a/mkdocs_autodoc/themes/bootstrap/_summary.html
+++ b/mkdocs_autodoc/themes/bootstrap/_summary.html
@@ -1,22 +1,35 @@
-<div class="summary">
-{% for section, members in sections %}
-    {% if section != 'Private Variable' %}
-    <h3>{{ section }}</h3>
-    <ul class="summary-contents">
-    {% for member, typ in members %}
-        {% if member.kind == 'Enum' %}
-        <li><a href="#{{ member.name }}">{{ member.name }}</a></li>
-        {% elif member.kind == 'Class' %}
-        <li><a href="{{ member.url }}" class="{{ member.url_class }}">{{ member.name }}</a></li>
-        {% elif member.kind == 'Module' %}
-        <li><a href="{{ member.url }}" class="{{ member.url_class }}">{{ member.name }}</a></li>
-        {% elif 'Function' in member.kind or 'Method' in member.kind or 'Builtin' in member.kind %}
-        <li>def <a href="#{{ member.name }}">{{ member.name }}</a>{{ member.args }}</li>
-        {% else %}
-        <li>{{ member.name }} : <a href="">{{ typ }}</a></li>
-        {% endif %}
-    {% endfor %}
-    </ul>
-    {% endif %}
-{% endfor %}
-</div>
+{% for section, members in sections -%}
+    {% if section != 'Private Variable' -%}
+        <h2>{{ section }}</h2>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <ul class="list-unstyled">
+                    {% for member, typ in members -%}
+                        {% if member.kind == 'Enum' -%}
+                            <li><a href="#{{ member.name }}">{{ member.name }}</a></li>
+                        {% elif member.kind == 'Class' -%}
+                            <li><a href="{{ member.url }}">{{ member.name }}</a></li>
+                        {% elif member.kind == 'Module' -%}
+                            <li><a href="{{ member.url }}">{{ member.name }}</a></li>
+                        {% elif 'Function' in member.kind or 'Method' in member.kind or 'Builtin' in member.kind -%}
+                            <li>def <a href="#def-{{ member.name.lower() }}">{{ member.name }}</a>{{ member.args }}</li>
+                        {% else -%}
+                            <li>{{ member.name }} : {{ type }}</li>
+                        {%- endif %}
+                    {%- endfor %}
+                </ul>
+            </div>
+        </div>
+        <ul>
+            {% for (url, name), section_members in member_map.items() %}
+                {% if section_members.get(section) %}
+                    {% if url %}
+                        <li>{{ section_members[section] | length }} {{ section.lower() }}(s) inherited from <a href="{{ url }}">{{ name }}</a></li>
+                    {% else %}
+                        <li>{{ section_members[section] | length }} {{ section.lower() }}(s) inherited from <span class="text-danger">{{ name }}</li>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        </ul>
+    {%- endif %}
+{%- endfor %}
