--- a/mkdocs_autodoc/themes/bootstrap/module.html
+++ b/mkdocs_autodoc/themes/bootstrap/module.html
@@ -1,39 +1,24 @@
-<h1 id="{{ object_name }}">{{ title }} <small>(module reference)</h1>
-{% if breadcrumbs %}
-<small>from {{ '.'.join(breadcrumbs) }}</small>
-{% endif %}
+<h1>{{ title.split('.')[-1] }} <small>[module documentation]</small></h1>
 
+<ul class="list-unstyled">
 {% if brief %}
-<p>{{ brief }} <a href="#details">More...</a></p>
+    <li style="margin-top:15px">{{ brief }}</li>
+    <li><a href="#details">Read More...</a></li>
 {% else %}
-<p>{{ details }}</p>
+    <li style="margin-top:15px">{{ page.wikitext_docs }}</li>
 {% endif %}
+</ul>
 
 {% include '_summary.html' %}
 
 {% if brief %}
-<h2 id="details">Details</h2>
-<p>{{ details }}</p>
+    <div class="page-header">
+        <h3><a name="details"></a> Detailed Description</h3>
+    </div>
+    {{ page.wikitext_docs }}
 {% endif %}
 
-<h2 id="functions">Functions</h2>
-
-{% include '_details.html' %}
-
-<!-- STARTTOC -->
-<div class="toc">
-    <ul>
-        <li><a href="#{{ object_name }}">{{ title }}</a></li>
-        <ul>
-            {% for section in sections %}
-            <li><a href="#{{ section[0] }}">{{ section[0] }}</a></li>
-            {% endfor %}
-            {% if brief %}
-            <li><a href="#details">Details</a></li>
-            {% endif %}
-        </ul>
-        <li><a href="#functions">Function Documentation</a></li>
-    </ul>
+<div class="page-header">
+    <h3>Functions</h3>
 </div>
-
-
+{% include '_details.html' %}
